Fix some issues with study visibility

--- a/app/view/css/utils.css
+++ b/app/view/css/utils.css
@@ -432,3 +432,4 @@ form.simple-form {
 .icon.icon-left           { background-image: url('/static/images/icons/chevrons-left.svg'); }
 .icon.icon-right          { background-image: url('/static/images/icons/chevrons-right.svg'); }
 .icon.icon-orcid          { background-image: url('/static/images/icons/orcid-authenticated.svg'); }
+.icon.icon-invisible      { background-image: url('/static/images/icons/red-eye.svg'); }
